--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -7,19 +7,19 @@
     font-family: 'Poppins', sans-serif;
 } */
 
-.top-wrapper {
+.top-home-wrapper {
     top: 0;
     padding: 0;
     position: fixed;
     width: 100%;
     height: 60px;
-    background: #242526;
+    background: #000000;
+    box-shadow: #2b2b2b 0px 0px 10px;
 }
 
-.wrapper {
+.wrapper-home {
     position: relative;
-    max-width: 1300px;
-    padding: 0px 30px;
+    max-width: 90%;
     height: 60px;
     line-height: 60px;
     margin: auto;
@@ -27,17 +27,16 @@
     align-items: center;
     justify-content: space-between;
 }
-.topbar{
+.topbar-home{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px 20px;
     color: white;
 }
 
-.topbar-right{
+.topbar-home-right{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -45,7 +44,7 @@
     gap: 40px;
     color: white;
 }
-.top-items{
+.top-items-home{
     background: transparent;
     border: none;
     outline: none;
