--- a/frontend/src/Logins/Auth.css
+++ b/frontend/src/Logins/Auth.css
@@ -49,7 +49,16 @@
     justify-content: center;
     align-items: center;
 }
-
+.forgot-pass{
+    margin-top: 3%;
+    margin-left: 12%;
+}
+.frgt-pass{
+    background: transparent;
+    border: none;
+    color: white;
+    font-size: 13px;
+}
 label {
     font-size: 1rem;
     color: #fff;
