--- a/frontend/src/Dash/Dashboard.css
+++ b/frontend/src/Dash/Dashboard.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .top-wrapper-dash {
     top: 0;
@@ -71,6 +71,4 @@
 
 
 .dash-main{
-    /* display: flex; */
-    /* justify-content: center; */
-}
+} */
