--- a/frontend/src/Home/Home.css
+++ b/frontend/src/Home/Home.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -12,13 +12,11 @@
 
 .home-top {
     flex: 0 0 60px;
-    /* Fixed height for the top bar */
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1001;
-    /* overflow-y: block; */
     background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -28,10 +26,8 @@
     margin-top: 4%;
     width: 180px;
     gap: 30%;
-    /* padding: 24px; */
     height: 100vh;
     padding-top: 20px;
-    /* background-color: #161616; */
 }
 .sidebar-home {
     display: flex;
@@ -42,10 +38,8 @@
 }
 .home-sidenav {
     flex: 0 0 200px;
-    /* Fixed width for the side navigation */
     position: fixed;
     top: 60px;
-    /* Below the top bar */
     left: 0;
     bottom: 0;
     width: 200px;
@@ -53,7 +47,6 @@
     color: white;
     padding: 10px 0;
     overflow-y: hidden;
-    /* Allow scrolling for long content */
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 .home-content {
@@ -68,7 +61,6 @@
     flex-direction: column;
     align-items: center;
     margin-top: 10px;
-    /* Add margin to account for the fixed top navigation bar */
 }
 
 
@@ -232,7 +224,6 @@
 }
 .input,
 .textarea {
-    /* padding: 10px; */
     height: 40px;
     width: 90%;
     border: 1px solid #d1d5db;
@@ -283,13 +274,10 @@
     justify-content:space-between;
     margin-right: 8%;
     align-items: center;
-    /* gap: 20px; */
-    /* margin-bottom: 5%; */
 }
 
 .form-Reg-radio {
     display: flex;
-    /* justify-content: space-between; */
     gap: 10px;
 }
 
@@ -299,7 +287,6 @@
     font-weight: 600;
     color: #4b5563;
     margin-left: -4px;
-        /* margin-bottom: 0.5rem; */
 }
 
 .radio{
@@ -329,4 +316,5 @@
     display: flex;
     align-items: center;
     gap: 10px;
-}
+} */
+
