--- a/frontend/src/Logins/Auth.css
+++ b/frontend/src/Logins/Auth.css
@@ -59,12 +59,12 @@
     color: white;
     font-size: 13px;
 }
-label {
+/* label {
     font-size: 1rem;
     color: #fff;
     display: block;
     margin-left: 60px;
-}
+} */
 
 input {
     width: 70%;
