--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,58 @@
-
+.topnav{
+    margin-left: 4px;
+    box-shadow: 5px 1px 10px 0px rgba(0,0,0,0.2);
+}
+.sidenav{
+    box-shadow: 5px 1px 10px 0px rgba(0,0,0,0.2);
+}
 
 .list-group-item:hover {
     background-color: #5599f2 !important;
     /* Blue background */
     /* White text */
+}
+
+.image-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1050;
+}
+
+.modal-content {
+    position: relative;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 90%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #fbf9f9;
+    cursor: pointer;
+}
+
+.img-thumbnail {
+    border: 1px solid #ddd;
+    padding: 4px;
+    border-radius: 4px;
+    transition: transform 0.2s;
+}
+
+.img-thumbnail:hover {
+    transform: scale(1.05);
 }
