--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,7 +12,7 @@
     /* White text */
 }
 
-.image-modal {
+/* .image-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -55,4 +55,71 @@
 
 .img-thumbnail:hover {
     transform: scale(1.05);
+} */
+
+/* For Image Modal */
+.image-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1050;
+}
+
+.modal-content {
+    position: relative;
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 90%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+}
+
+.close-button {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    font-size: 2rem;
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+}
+
+.img-fluid {
+    max-width: 100%;
+    max-height: 80vh;
+    border-radius: 8px;
+    object-fit: contain;
+}
+
+/* For PDF Modal */
+.pdf-modal  {
+    /* padding: 0; */
+    position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    z-index: 1050;
+}
+
+.pdf-viewer {
+    width: 100%;
+    height: calc(100vh - 50px);
+    border: none;
+}
+.danger{
+    color: red;
 }
