--- a/frontend/src/Logins/Auth.css
+++ b/frontend/src/Logins/Auth.css
@@ -1,10 +1,9 @@
-/* General Styles */
+/* General Styles
 .loginbody {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #5a5757, #878381 50%, #cdc8c6);
-    /* Beautiful gradient */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +63,6 @@
     color: #fff;
     display: block;
     margin-left: 60px;
-} */
 
 input {
     width: 70%;
@@ -136,7 +134,6 @@ input:focus {
     text-decoration: underline;
 }
 
-/* Small Screen Optimization */
 @media (max-width: 480px) {
     .auth-box {
         padding: 20px 25px;
@@ -153,4 +150,88 @@ input:focus {
     .auth-button {
         font-size: 0.9rem;
     }
-}
+} */
+
+                /* body {
+                    padding-top: 4.2rem;
+                    padding-bottom: 4.2rem;
+                    background: rgba(0, 0, 0, 0.76);
+                }
+         */
+                /* a {
+                    /* text-decoration: none !important; 
+                    color: blue;
+                } */
+                .link{
+                    color: blue;
+                }
+        
+                
+        
+                .myform {
+                    position: relative;
+                    display: -ms-flexbox;
+                    display: flex;
+                    padding: 1rem;
+                    -ms-flex-direction: column;
+                    flex-direction: column;
+                    width: 100%;
+                    pointer-events: auto;
+                    background-color: #fff;
+                    background-clip: padding-box;
+                    border: 1px solid rgba(0, 0, 0, .2);
+                    border-radius: 1.1rem;
+                    outline: 0;
+                    max-width: 500px;
+                }
+        
+                .tx-tfm {
+                    text-transform: uppercase;
+                }
+        
+                .mybtn {
+                    border-radius: 50px;
+                }
+        
+                .login-or {
+                    position: relative;
+                    color: #aaa;
+                    margin-top: 10px;
+                    margin-bottom: 10px;
+                    padding-top: 10px;
+                    padding-bottom: 10px;
+                }
+        
+                .span-or {
+                    display: block;
+                    position: absolute;
+                    left: 50%;
+                    top: -2px;
+                    margin-left: -25px;
+                    background-color: #fff;
+                    width: 50px;
+                    text-align: center;
+                }
+        
+                .hr-or {
+                    height: 1px;
+                    margin-top: 0px !important;
+                    margin-bottom: 0px !important;
+                }
+        
+                .google {
+                    color: #666;
+                    width: 100%;
+                    height: 40px;
+                    text-align: center;
+                    outline: none;
+                    border: 1px solid lightgrey;
+                }
+        
+                form .error {
+                    color: #ff0000;
+                }
+        
+                #second {
+                    display: none;
+                }
