--- a/frontend/src/Logins/Auth.css
+++ b/frontend/src/Logins/Auth.css
@@ -162,7 +162,7 @@ input:focus {
                     /* text-decoration: none !important; 
                     color: blue;
                 } */
-                .link{
+                /* .link{
                     color: blue;
                 }
         
@@ -234,4 +234,4 @@ input:focus {
         
                 #second {
                     display: none;
-                }
+                } */
