--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,125 +1,323 @@
-.topnav{
-    margin-left: 4px;
-    box-shadow: 5px 1px 10px 0px rgba(0,0,0,0.2);
-}
-.sidenav{
-    box-shadow: 5px 1px 10px 0px rgba(0,0,0,0.2);
+/* Login & signup */
+
+.login-signup-form .form-group .input-group.input-group-merge>.form-control {
+    text-indent: 35px;
+    /* border-top-left-radius: 4px; */
+    border-bottom-left-radius: 4px;
+    height: calc(2.65em + 0.75rem + 2px);
 }
 
-.list-group-item:hover {
-    background-color: #5599f2 !important;
-    /* Blue background */
-    /* White text */
+.form-control {
+    border-color: #ebebeb;
+    padding: 0.975rem 0.85rem;
+    height: calc(2.98em + 0.75rem + 2px);
+}
+.form-control:hover {
+    border-color: none;
 }
 
-/* .image-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+.input-icon {
+    height: calc(3.4rem + 2px);
+    position: absolute;
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1050;
+    display: block;
+    width: 40px;
+    top: 0;
+    bottom: 0;
+    left: 0;
 }
 
-.modal-content {
-    position: relative;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    max-width: 90%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-}
-
-.close-button {
+.input-icon span {
+    /* padding: 18px 15px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
+    border-left: 2px solid #6730e3;
     position: absolute;
-    top: 8px;
-    right: 10px;
-    font-size: 2rem;
-    background: none;
-    border: none;
-    color: #fbf9f9;
-    cursor: pointer;
-}
-
-.img-thumbnail {
-    border: 1px solid #ddd;
-    padding: 4px;
+    font-size: 18px;
+    height: calc(3.4rem + 2px);
     border-radius: 4px;
-    transition: transform 0.2s;
 }
 
-.img-thumbnail:hover {
-    transform: scale(1.05);
-} */
+.ti-lock,
+.ti-user {
+    color: #6730e3;
+}
+.gray-light-bg {
+    background: #f4f7fa;
+}
+.bg-cover {
+    width: 100%;
+    min-height: 100%;
+    height: auto;
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.980357108663778) 0%, rgba(4, 4, 75, 0.8991246156665791) 26%, rgba(39, 39, 182, 0.7142506660867471) 48%, rgba(19, 19, 78, 0.8122898817730217) 72%, rgba(0, 0, 0, 0.949544783733806) 100%),
+        url('./Assets/BACK.webp') no-repeat center center;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    flex: 1;
+}
 
-/* For Image Modal */
-.image-modal {
+.h8 {
+    font-size: 0.75rem;
+}
+
+
+
+
+/* Home ======================================= */
+.wrapper {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-color: #f4f7fa;
+}
+.content {
+    width: calc(100% - 260px);
+    margin-left: 260px;
+    transition: all 0.3s;
+}
+.content.active {
+    width: 100%;
+    margin-left: 0;
+}
+
+
+/* sidebar */
+
+#sidebar {
+    width: 260px;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1050;
-}
-
-.modal-content {
-    position: relative;
+    height: 100vh;
     background: #fff;
+    transition: all 0.3s;
+    z-index: 11;
+    background-color: #f4f7fa;
+    box-shadow: 0 10px 30px -12px rgb(0 0 0 / 42%), 0 4px 25px 0px rgb(0 0 0 / 12%), 0 8px 10px -5px rgb(0 0 0 / 20%);
+}
+#sidebar .sidebar-header {
     padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    max-width: 90%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden;
+    /* background-color: #ffffff; */
+    border-bottom: 1px solid #eee;
+}
+.sidebar-header h3 {
+    color: #333;
+    font-size: 30px;
+    margin: 0px;
+    text-transform: uppercase;
+    transition: all 0.5s ease;
+    font-weight: 600;
+}
+/* .sidebar-header h3 img {
+    width: 45px;
+    margin-right: 10px;
+} */
+ #sidebar ul li {
+     padding: 2px 7px;
+ }
+#sidebar ul li.active>a {
+    color: #333;
+    background-color: rgba(200, 200, 200, 0.2);
+}
+#sidebar ul li a:hover {
+    color: #333;
+    background-color: rgba(200, 200, 200, 0.2);
+}
+#sidebar ul li a {
+    padding: 10px;
+    line-height: 30px;
+    border-radius: 5px;
+    font-size: 15px;
+    position: relative;
+    font-weight: 400;
+    display: block;
+}
+#sidebar ul li a span {
+    text-transform: capitalize;
+    display: inline-block;
+}
+#sidebar.active {
+    margin-left: -260px;
 }
 
-.close-button {
-    position: absolute;
-    top: 8px;
-    right: 10px;
-    font-size: 2rem;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-}
 
-.img-fluid {
-    max-width: 100%;
-    max-height: 80vh;
-    border-radius: 8px;
-    object-fit: contain;
-}
 
-/* For PDF Modal */
-.pdf-modal  {
-    /* padding: 0; */
-    position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    z-index: 1050;
-}
-
-.pdf-viewer {
+/* Topbar */
+.top-navbar {
     width: 100%;
-    height: calc(100vh - 50px);
-    border: none;
+    z-index: 9;
+    position: relative;
 }
-.danger{
-    color: red;
+.navbar {
+    background-color: #2727b6;
+    color: #FFFFFF;
+}
+#sidebarCollapse {
+    border-radius: 50%;
+    width: 45px;
+    height: 45px;
+    text-align: center;
+    line-height: 45px;
+    margin-right: 20px;
+    border: none;
+    color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.09);
+}
+#sidebarCollapse span {
+    margin: 9px;
+    padding: 0px;
+}
+#sidebar.show-nav,
+.body-overlay.show-nav {
+    transform: translatex(0%);
+    opacity: 1;
+    display: block;
+    visibility: visible;
+    z-index: 15;
+}
+.navbar-brand {
+    color: #FFFFFF !important;
+}
+.navbar-nav>li.active {
+    color: #FFFFFF;
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.08);
+}
+.navbar-nav>li>div {
+    color: #FFFFFF;
+}
+.navbar .notification {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    display: block;
+    font-size: 9px;
+    border: 0px;
+    font-size: 10px;
+    background: #d9534f;
+    min-width: 15px;
+    text-align: center;
+    padding: 1px 5px;
+    height: 15px;
+    border-radius: 2px;
+    line-height: 14px;
+}
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -260px;
+        position: fixed;
+    }
+
+    #sidebar.show-nav {
+        margin-left: 0;
+        /* height: 100vh !important; */
+    }
+
+    .content {
+        width: 100%;
+        margin-left: 0;
+        overflow-x: hidden;
+    }
+}
+
+
+/* Outlet */
+.main-content {
+    padding: 10px 20px 0px 20px;
+    margin-top: 3%;
+    position: relative;
+    border-radius: 10px;
+    width: 100%;
+    /* height: calc(100vh - 100px); */
+    /* background-color: white; */
+}
+
+
+/* Main */
+.table-wrapper {
+    background: #fff;
+    padding: 20px 25px;
+    margin: 10px 0px 30px 0px;
+    width: 100%;
+    overflow: auto;
+    border-radius: 3px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+}
+.table-title {
+    background: rgba(39, 39, 182, 0.6142506660867471);
+    color: #fff;
+    padding: 10px 30px;
+    margin: -20px -25px 10px;
+    border-radius: 0px 0px 0 0;
+}
+.table-title h2 {
+    margin: 5px 0 0;
+    font-size: 24px;
+}
+.table-title .btn {
+    color: #ffffff;
+    float: right;
+    /* gap: 10px; */
+    font-size: 13px;
+    background: #085b10;
+    border: none;
+    min-width: 50px;
+    border-radius: 2px;
+    border: none;
+    /* margin-left: 0%; */
+    outline: none !important;
+    margin-left: 10px;
+}
+table.table tr th,
+table.table tr td {
+    border-color: #e9e9e9;
+    padding: 8px 15px;
+    font-size: 18px;
+    vertical-align: middle;
+}
+table.table tr th:first-child {
+    width: 60px;
+}
+table.table tr th:last-child {
+    width: 100px;
+}
+table.table-striped.table-hover tbody tr:hover {
+    background: #f5f5f5;
+}
+@media screen and (max-width: 768px) {
+    .table-wrapper{
+        margin: 0;
+    }
+    .main-content {
+        /* margin: 0; */
+        padding: 0;
+    }
+    .content{
+        margin: 0;
+    }
+    .table{
+        padding: 0;
+        margin: 0;
+    }
+    .table-title .hid{
+        /* font-size: 20px; */
+        /* justify-content: flex-start; */
+        display: none;
+    }
+    .table-title .btn{
+        /* justify-content: flex-end; */
+        margin-left: 50%;
+    }
+    .title-row{
+        display: flex;
+        /* gap: 10px; */
+    }
 }
