--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -378,8 +378,19 @@ table.table-striped.table-hover tbody tr:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 1111;
     transition: 0.5s ease-in-out;
+}
+.search{
+    width: 100%;
+    height: 10%;
+    margin-top: 3%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    background: white
+    /* transition: box-shadow 0.3s ease, transform 0.3s ease; */
 }
 
 .modal-container {
